@@ -12,6 +12,12 @@ public class Test2 {
          *  -Xms20m -Xmx20m -Xmn7m -XX:NewRatio=2  -XX:+PrintGCDetail   -XX:+UseSerialGC
          *
          * -XX:+HeapDumpOnOutOfMemoryError  -XX:HeapDumpPath=d:/test2.dump
+         * -XX:PermSize=64M 方法区大小
+         * -XX:MaxPermSize=64M  方法区最大大小
+         * ************************************
+         *  jdk1.8后，没有了方法区，改成了元数据区  Perm==>  MateData
+         *
+         *
          *
          *  -Xms20m:初始内存
          *  -Xmx20m:可扩展内存
